objects/Checklist_de_visita__c.object
<CustomObject>
    <fields>
        <fullName>Exposi_o_G_ndola_Pergunta_04__c</fullName>
        <defaultValue>&quot;Balla Finest é maior ou igual a 50% do espaço de JWRed?&quot;</defaultValue>
        <label>04</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExposicaoGondola_Pergunta_01__c</fullName>
        <defaultValue>&quot;Chivas 12 está posicionado ao lado de JWBlack?&quot;</defaultValue>
        <label>01</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Festas__c</fullName>
        <description>Festas para contrapartida de contrato. Somente On Trade.</description>
        <label>Festas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gerente_Regional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gerente Regional</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists_de_visita3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gerente_de_area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gerente de área</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists_de_visita2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Havana_Confinado__c</fullName>
        <label>Havana Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Havana_Estoque__c</fullName>
        <label>Havana Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana_Preco_Praticado__c</fullName>
        <label>Havana Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Havana_Quantidade_de_Frentes_na_Gondola__c</fullName>
        <label>Havana Quantidade de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana_Quantidade_de_pontos__c</fullName>
        <label>Havana Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana_Sell_in__c</fullName>
        <label>Havana Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Havana_Sell_out__c</fullName>
        <label>Havana Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Havana</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Havana_visual__c</fullName>
        <label>Havana (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Houve_Venda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Houve Venda?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identifica_Abordagem__c</fullName>
        <formula>IF (OR(Abordagem_Produto_01__c, Abordagem_Produto_02__c, Abordagem_Produto_03__c),
   1,
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifica Abordagem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifica_Acao_Degustacao__c</fullName>
        <formula>IF(OR(Degusta_o_Produto_01__c, Degusta_o_Produto_02__c, Degusta_o_Produto_03__c),
   1,
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifica Ação Degustação</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifica_Lancamento_Produto__c</fullName>
        <formula>IF(OR(Lan_amento_de_Produto_Produto_01__c, Lan_amento_de_Produto_Produto_03__c, Lan_amento_de_Produto_Produto_03__c),
   1,
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifica Lançamento Produto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifica_Loja_com_Acao_Concorrencia__c</fullName>
        <formula>IF( AND(ISBLANK(Produto_Concorrente_01__c), ISBLANK(Produto_Concorrente_02__c), ISBLANK(Produto_Concorrente_02__c)),
   0,
   1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifica Loja com Ação Concorrência</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifica_Novo_Material_POP__c</fullName>
        <formula>IF(OR(Novo_Material_POP_Produto_01__c, Novo_Material_POP_Produto_01__c, Novo_Material_POP_Produto_01__c),
   1,
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifica Novo Material POP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identifica_Tabloide__c</fullName>
        <formula>IF(AND(OR(ISBLANK(LAT_Product1__c),ISBLANK(Produto_01Pernod__c)),OR(ISBLANK(LAT_Product2__c),ISBLANK(Produto_02Pernod__c)),OR(ISBLANK(LAT_Product3__c),ISBLANK(Produto_03Pernod__c)),OR(ISBLANK(LAT_Product4__c),ISBLANK(Produto_04Pernod__c)),OR(ISBLANK(LAT_Product5__c),ISBLANK(Produto_05Pernod__c))),
   0,
   1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identifica Tablóide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentivo_de_Brigada__c</fullName>
        <description>Incentivo de brigada para contrapartidas do contrato. Somente para layout de On Trade.</description>
        <label>Incentivo de Brigada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Informacoes_coletadas_execucao_promotor__c</fullName>
        <inlineHelpText>Informações coletadas sobre a execução do Promotor.</inlineHelpText>
        <label>Informações coletadas execução promotor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacoes_sobre_pontos_extras_e_cross__c</fullName>
        <inlineHelpText>Informações sobre pontos extras e cross merchandising.</inlineHelpText>
        <label>Informações sobre pontos extras e cross</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jameson_Confinado__c</fullName>
        <label>Jameson Confinado?</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jameson_Estoque__c</fullName>
        <label>Jameson Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jameson_Preco_Praticado__c</fullName>
        <label>Jameson Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jameson_Quantidade_de_Frentes_na_Gondola__c</fullName>
        <label>Jameson Quantidade de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jameson_Quantidade_de_pontos__c</fullName>
        <label>Jameson Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jameson_Sell_in__c</fullName>
        <label>Jameson Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jameson_Sell_out__c</fullName>
        <label>Jameson Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jameson__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Jameson</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jameson_visual__c</fullName>
        <label>Jameson (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jim_Beam_Confinado__c</fullName>
        <label>Jim Beam Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Não</fullName>
                </value>
                <value>
                    <fullName>Sim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jim_Beam_Estoque__c</fullName>
        <label>Jim Beam Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_Preco_Praticado__c</fullName>
        <label>Jim Beam Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Jim Beam Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_Quantidade_de_pontos__c</fullName>
        <label>Jim Beam Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_Sell_in__c</fullName>
        <label>Jim Beam Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_Sell_out__c</fullName>
        <label>Jim Beam Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ValidOnTradeChecklistGE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate whether this checklist has the valid GE for this month/client or not.</description>
        <label>Valid On Trade GE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ValidOnTradeChecklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid On Trade Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pedido</label>
        <referenceTo>LAT_Opportunity__c</referenceTo>
        <relationshipLabel>Checklist de Visitas</relationshipLabel>
        <relationshipName>LAT_Checklist_de_Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Product1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto PRB 01</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Checklist de Visitas</relationshipLabel>
        <relationshipName>LAT_Checklist_de_Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto PRB 02</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Checklist de Visitas (Produto 02)</relationshipLabel>
        <relationshipName>LAT_Checklist_de_Visitas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Product3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto PRB 03</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Checklist de Visitas (Produto 03)</relationshipLabel>
        <relationshipName>LAT_Checklist_de_Visitas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lan_amento_de_Produto_Produto_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lançamento de Produto?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lan_amento_de_Produto_Produto_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lançamento de Produto?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lan_amento_de_Produto_Produto_03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lançamento de Produto?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <label>Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Funcional__c</fullName>
        <description>Material Funcional para contrapartidas do contrato. Somente para layout de On Trade.</description>
        <label>Material Funcional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_de_Merchandising__c</fullName>
        <label>Material de Merchandising</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Material_promo_o_visivel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Material de comunicação da promoção está na casa / visível ?</inlineHelpText>
        <label>Material promoção visível</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mec_nica_Produto_01__c</fullName>
        <label>Mecânica</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mec_nica_Produto_02__c</fullName>
        <label>Mecânica</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mec_nica_Produto_03__c</fullName>
        <label>Mecânica</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Montilla_Confinado__c</fullName>
        <label>Montilla Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montilla_Estoque__c</fullName>
        <label>Montilla Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montilla_Preco_Praticado__c</fullName>
        <label>Montilla Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montilla_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Montilla Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montilla_Quantidade_de_pontos__c</fullName>
        <label>Montilla Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montilla_Sell_in__c</fullName>
        <label>Montilla Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montilla_Sell_out__c</fullName>
        <label>Montilla Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montilla__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Montilla</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montilla_visual__c</fullName>
        <label>Montilla (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_de_nao_satisfacao_com_a_acao__c</fullName>
        <label>Motivo de não satisfação com a ação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Motivo_de_nao_venda__c</fullName>
        <label>Motivo de não venda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - preço fora da política acordada</fullName>
                </value>
                <value>
                    <fullName>02 - excesso de estoque</fullName>
                </value>
                <value>
                    <fullName>03 - compra no disponível.</fullName>
                </value>
                <value>
                    <fullName>04 - outros...</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_de_nao_visitar__c</fullName>
        <description>Motivo da não visita do cliente. Utilizada em todos os layouts do checklist.</description>
        <inlineHelpText>Justificar o motivo da não realização da visita planejada</inlineHelpText>
        <label>Motivo de não visitar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente não disponível</fullName>
                </value>
                <value>
                    <fullName>Problema de deslocamento</fullName>
                </value>
                <value>
                    <fullName>Outros...</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Confinado__c</fullName>
        <label>Mumm Cordon Rouge Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Estoque__c</fullName>
        <label>Mumm Cordon Rouge Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Preco_Praticado__c</fullName>
        <label>Mumm Cordon Rouge Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Qtde_Frentes_Gondola__c</fullName>
        <label>Mumm Cordon Rouge Qtde Frentes Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Quantidade_de_pontos__c</fullName>
        <label>Mumm Cordon Rouge Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Sell_in__c</fullName>
        <label>Mumm Cordon Rouge Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Sell_out__c</fullName>
        <label>Mumm Cordon Rouge Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Confinado__c</fullName>
        <label>Mumm Cuvée Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Estoque__c</fullName>
        <label>Mumm Cuvée Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Preco_Praticado__c</fullName>
        <label>Mumm Cuvée Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Mumm Cuvée  Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Quantidade_de_pontos__c</fullName>
        <label>Mumm Cuvée  Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Sell_in__c</fullName>
        <label>Mumm Cuvée Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Sell_out__c</fullName>
        <label>Mumm Cuvée Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Mumm Cuveé</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_visual__c</fullName>
        <label>Mumm Cuveé (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Confinado__c</fullName>
        <label>Natu Nobilis Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Estoque__c</fullName>
        <label>Natu Nobilis Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Preco_Praticado__c</fullName>
        <label>Natu Nobilis Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Natu Nobilis Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Quantidade_de_pontos__c</fullName>
        <label>Natu Nobilis Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Sell_in__c</fullName>
        <label>Natu Nobilis Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Sell_out__c</fullName>
        <label>Natu Nobilis Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Natu Nobilis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_visual__c</fullName>
        <label>Natu Nobilis (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negocia_o_Ponto_Extra_Produto_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negociação / Ponto Extra?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negocia_o_Ponto_Extra_Produto_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negociação / Ponto Extra?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negocia_o_Ponto_Extra_Produto_03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negociação / Ponto Extra?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nome_do_PDV__c</fullName>
        <label>Nome do PDV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_do_Visitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nome do Visitante</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklists_de_visita</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nome_do_Visitante_do_cliente__c</fullName>
        <label>Nome do Visitante</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novo_Material_POP_Produto_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Novo Material POP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Novo_Material_POP_Produto_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Novo Material POP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Novo_Material_POP_Produto_03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Novo Material POP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objetivo__c</fullName>
        <label>Objetivo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sell-In</fullName>
                </value>
                <value>
                    <fullName>Sell-out</fullName>
                </value>
                <value>
                    <fullName>Positivação</fullName>
                </value>
                <value>
                    <fullName>Estoque</fullName>
                </value>
                <value>
                    <fullName>Ação promocional</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Olmeca_Confinado__c</fullName>
        <label>Olmeca Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Olmeca_Estoque__c</fullName>
        <label>Olmeca Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Olmeca_Preco_Praticado__c</fullName>
        <label>Olmeca Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Olmeca_Quantidade_de_Frentes_na_Gondola__c</fullName>
        <label>Olmeca Quantidade de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Olmeca_Quantidade_de_pontos__c</fullName>
        <label>Olmeca Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Olmeca_Sell_in__c</fullName>
        <label>Olmeca Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Olmeca_Sell_out__c</fullName>
        <label>Olmeca Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oportunidades_de_negociacao__c</fullName>
        <label>Oportunidades de negociação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orloff_Confinado__c</fullName>
        <label>Orloff Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orloff_Estoque__c</fullName>
        <label>Orloff Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orloff_Preco_Praticado__c</fullName>
        <label>Orloff Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orloff_Quantidade_de_Frentes_na_Gondola__c</fullName>
        <label>Orloff Quantidade de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orloff_Quantidade_de_pontos__c</fullName>
        <label>Orloff Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orloff_Sell_in__c</fullName>
        <label>Orloff Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orloff_Sell_out__c</fullName>
        <label>Orloff Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>